feat(IAM): Iam service added.

--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -1,23 +1,34 @@
 {
   "ReverseProxy": {
     "Routes": {
-      "product-route": {
-        "ClusterId": "product-cluster",
+      "inventory-route": {
+        "ClusterId": "inventory-cluster",
         "Match": {
-          "Path": "/products/{**catch-all}"
+          "Path": "/inventory/{**catch-all}"
+        }
+      },
+      "iam-route": {
+        "ClusterId": "iam-cluster",
+        "Match": {
+          "Path": "/iam/{**catch-all}"
         }
       }
     },
     "Clusters": {
-      "product-cluster": {
+      "inventory-cluster": {
         "Destinations": {
-          "product-service": {
-            "Address": "http://localhost:5001/"
+          "inventory-service": {
+            "Address": "http://localhost:5000/"
+          }
+        }
+      },
+      "iam-cluster": {
+        "Destinations": {
+          "iam-service": {
+            "Address": "http://localhost:5085/"
           }
         }
       }
     }
   }
-
-
 }
